Changes to build and design

--- a/web/Shared/NavMenu.razor
+++ b/web/Shared/NavMenu.razor
@@ -1,16 +1,4 @@
-﻿
-    <FluentMenu>
-        <FluentMenuItem>
-            Home
-        </FluentMenuItem>
-             <FluentMenuItem>
-            Home
-        </FluentMenuItem>
-             <FluentMenuItem>
-            Home
-        </FluentMenuItem>
-    </FluentMenu>
-@* <div class="top-row ps-3 navbar navbar-dark">
+﻿@* <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">web</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
@@ -39,7 +27,7 @@
     </nav>
 </div> *@
 
-@code {
+@* @code {
     private bool collapseNavMenu = true;
 
     private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
@@ -48,4 +36,4 @@
     {
         collapseNavMenu = !collapseNavMenu;
     }
-}
+} *@
