--- a/web/Shared/MainLayout.razor
+++ b/web/Shared/MainLayout.razor
@@ -1,14 +1,9 @@
 ﻿@inherits LayoutComponentBase
-@using Microsoft.Fast.Components.FluentUI
 <div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
 
     <main>
-       <FluentCard>
-  <h2>Hello World!</h2>
-  <FluentButton Appearance="@Appearance.Accent">Click Me</FluentButton>
-</FluentCard>
+      <div class="brand">
+          <p class="brand-name">punyasloka.XYZ</p>
+          <p class="brand-tag">Under development. <i><a href="https://github.com/bitsnorbytes/squirrel-esque">Github</a></i>.</p></div>
     </main>
 </div>
