--- a/web/Shared/MainLayout.razor
+++ b/web/Shared/MainLayout.razor
@@ -4,6 +4,6 @@
     <main>
       <div class="brand">
           <p class="brand-name">punyasloka.XYZ</p>
-          <p class="brand-tag">Under development. <i><a href="https://github.com/bitsnorbytes/squirrel-esque">Github</a></i>.</p></div>
+          <p class="brand-tag">Under development. <i><a href="https://github.com/bitsnorbytes/squirrel-esque">Github</a></i></p></div>
     </main>
 </div>
